--- a/starter/style.css
+++ b/starter/style.css
@@ -21,6 +21,10 @@ h4 {
   color: #fff;
 }
 
+p {
+  color: #fff;
+}
+
 a {
   color: #fff;
   text-decoration: none;
@@ -151,6 +155,25 @@ a {
   width: 100vw;
 }
 
+.level-winner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 4rem;
+  background-color: #111;
+  text-align: center;
+  z-index: 10;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 250ms ease;
+}
+
+.game-over .level-winner {
+  opacity: 1;
+  pointer-events: all;
+}
+
 .level-footer {
   position: absolute;
   left: 0;
@@ -214,4 +237,28 @@ a {
   justify-content: center;
   align-items: center;
   text-align: center;
+}
+
+.level-two .ball:first-of-type {
+  top: 35%;
+  animation-delay: 1s;
+}
+
+.level-two .ball:last-of-type {
+  top: 65%;
+  animation-delay: 2s;
+}
+
+.level-three .ball:first-of-type {
+  top: 35%;
+  height: 1.5rem;
+  width: 1.5rem;
+  animation-delay: 1s;
+}
+
+.level-three .ball:last-of-type {
+  top: 65%;
+  height: 3rem;
+  width: 3rem;
+  animation-delay: 2s;
 }
